--- a/index.html
+++ b/index.html
@@ -165,11 +165,13 @@
                       </div>
                     </div>
                     <div class="row">
-                      <div class="buttons padd-15">
-                        <a href="#" class="btn"> Download CV</a>
-                        <a href="#contact" class="btn hire-me"> Download CV</a>
-                      </div>
+                   <div class="buttons padd-15">
+                    <!-- <a href="documents/Selorm-Sem-Resume.pdf" class="btn" download>Download CV</a> -->
+                     <a href="#contact" class="btn hire-me">Hire Me</a>
                     </div>
+                       </div>
+
+
                   </div>
                   <div class="skills padd-15">
                     <div class="row">
