--- a/index.html
+++ b/index.html
@@ -139,15 +139,15 @@
                 <div class="row">
                   <div class="personal-info padd-15">
                     <div class="row">
-                      <div class="info-item padd-15">
+                      <!-- <div class="info-item padd-15">
                         <p>Birthday : <span>28 April 2003</span></p>
-                      </div>
-                      <div class="info-item padd-15">
+                      </div> -->
+                      <!-- <div class="info-item padd-15">
                         <p>Age : <span>22</span></p>
-                      </div>
-                      <div class="info-item padd-15">
+                      </div> -->
+                      <!-- <div class="info-item padd-15">
                         <p>Website : <span>www.djfhdj.com</span></p>
-                      </div>
+                      </div> -->
                       <div class="info-item padd-15">
                         <p>Email : <span>selormsem48@gmail.com</span></p>
                       </div>
